# simson

./: LICENSE  README.md  SECURITY.md  architecture.md  hacs.json  prepare_addon.sh  repository.yaml
.github/workflows/: release.yml
ci/: github-actions.yml
ci/scripts/: build-engine.sh  build-frontend.sh  create-release.sh  run-integration-test.sh
custom_components/ha_voip/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  engine_manager.py  manifest.json  sensor.py  services.py  services.yaml  websocket_api.py
docs/: admin-guide.md  api.md  migration-guide.md  onboarding.md  roadmap.md  security-guide.md  troubleshooting.md
examples/: asterisk_integration.yaml  automation_examples.yaml  demo_setup.md  sample_config.yaml
frontend/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
frontend/src/: call-popup.ts  diagnostics-panel.ts  dialpad.ts  localize.ts  onboarding-wizard.ts  styles.ts  types.ts  voip-card.ts  webrtc-manager.ts
ha_voip_engine/: .dockerignore  .gitignore  Dockerfile  build.yaml  config.yaml  run.sh
integration/: manifest.json  requirements.txt
migrations/: 001_initial_schema.sql  002_add_federation.sql  migrate.py
monitoring/grafana/: dashboard.json  datasource.json
monitoring/prometheus/: alert-rules.yml  prometheus.yml
ops/: docker-compose.demo.yml  docker-compose.yml
ops/docker/: Dockerfile.engine  Dockerfile.integration
ops/k8s/: ha-voip-deployment.yaml  ha-voip-service.yaml  values.yaml
provisioning/: __init__.py  backup_manager.py  network_tester.py  provisioning_api.py
provisioning/certificate_manager/: __init__.py  acme_client.py  cert_store.py  local_ca.py
tests/fuzz/: Cargo.toml  fuzz_sdp_parser.rs  fuzz_sip_parser.rs
tests/integration/: test_call_flow.py  test_certificate.py  test_turn_fallback.py
tests/load/: benchmark_config.yaml  load_test.py
voip-engine/: Cargo.toml  build.rs
voip-engine/proto/: voip.proto
voip-engine/src/: config.rs  db.rs  health.rs  main.rs  metrics.rs  recording.rs  turn_server.rs
voip-engine/src/api/: grpc.rs  mod.rs  rest.rs
voip-engine/src/media/: jitter_buffer.rs  mod.rs  rtp.rs  srtp.rs
voip-engine/src/sip/: dialog.rs  mod.rs  parser.rs  transport.rs
(+28 files in other folders)
