[package]
name = "voip-engine"
version = "1.0.2"
edition = "2021"
description = "High-performance VoIP engine for Home Assistant"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
hyper = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
nom = "7"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
prometheus = "0.13"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
dashmap = "5"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
aes = "0.8"
md-5 = "0.10"
tokio-stream = "0.1"
crc32fast = "1"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "voip-engine"
path = "src/main.rs"
